Fix Q_OBJECT macro parse error.

BUG:216935
FIXED-IN:4.11.6
(cherry picked from commit fa356a629dbef8b352d9d3d71a5df830454a7c38)